Fixed nav bar spacing

--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -8,12 +8,14 @@
   background-color: #fafafa;
   box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
   color: black;
-  width: 100%;
+  width: 100vw;
   height: 50px;
 }
 
 div.nav-spacer {
   width: 30px;
+  height: 30px;
+  margin-right: 20px;
 }
 
 span.tool-bar__app-name {
@@ -70,5 +72,6 @@ button.tool-bar_about-button {
 
   div.nav-spacer {
     width: 220px;
+    margin: 0;
   }
 }
